Fix margin, height, align-items.

--- a/src/sass/_hero.scss
+++ b/src/sass/_hero.scss
@@ -25,13 +25,11 @@
   &__promo {
     @include font-style($fs: 64px, $tt: none);
     line-height: 1;
-    margin-bottom: 50px;
   }
 
   &__title {
     @include font-style($fs: 36px, $tt: none);
     line-height: calc(45 / 36);
-    margin-bottom: 10px;
   }
 
   &__description {
@@ -46,7 +44,6 @@
     width: 209px;
     height: 51px;
     padding: 14px 0;
-    margin-bottom: 50px;
     color: $secondary-text-color;
     transition: background-color 280ms cubic-bezier(0.4, 0, 0.2, 1);
 
@@ -73,7 +70,7 @@
   .carousel-overlay {
     position: absolute;
     width: 100%;
-    height: 40px;
+    height: 50px;
     bottom: 0;
     left: 0;
     top: auto;
@@ -82,10 +79,11 @@
     background: rgba(120, 116, 124, 0.5);
 
     &__text {
-      color: #ffffff;
       display: flex;
       justify-content: space-between;
-      align-items: baseline;
+      align-items: center;
+      color: #ffffff;
+      height: 100%;
     }
 
     &__promo {
@@ -140,13 +138,11 @@
     &__promo {
       @include font-style($fs: 28px, $tt: none);
       line-height: 1;
-      margin-bottom: 0;
     }
 
     &__title {
       @include font-style($fs: 24px, $tt: none);
       line-height: 1.25;
-      margin-bottom: 0;
     }
 
     &__description {
@@ -162,7 +158,6 @@
       width: 200px;
       height: auto;
       padding: 8px 0;
-      margin-bottom: 0;
     }
 
     &__counter {
@@ -203,7 +198,6 @@
     &__promo {
       @include font-style($fs: 52px, $tt: none);
       line-height: 1;
-      margin-bottom: 0;
     }
 
     &__title {
@@ -239,6 +233,22 @@
 
     &__control {
       display: block;
+    }
+  }
+}
+
+@include media-breakpoint-up(xxxl) {
+  .carousel-overlay {
+    &__promo {
+      margin-bottom: 50px;
+    }
+
+    &__title {
+      margin-bottom: 10px;
+    }
+
+    &__link {
+      margin-bottom: 50px;
     }
   }
 }
